--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -5,8 +5,9 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<link rel="stylesheet" href="./global.css">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div class="svelte-container" style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
