--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
-		<link rel="stylesheet" href="./global.css">
+		<link rel="stylesheet" href="/global.css">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div class="svelte-container" style="display: contents">%sveltekit.body%</div>
